--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.14"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
